[gd_scene load_steps=5 format=3 uid="uid://bwb1x3ler87ug"]

[ext_resource type="Script" uid="uid://bgyorb5pvym08" path="res://scripts/favorite_member.gd" id="1_ldfpm"]
[ext_resource type="Texture2D" uid="uid://ctb2muwbi50se" path="res://assets/character_portraits/alicia.png" id="2_wbfks"]
[ext_resource type="Theme" uid="uid://ctd47cus6kna0" path="res://assets/themes/menu_theme.tres" id="3_hy3ym"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3od8"]
bg_color = Color(0.223529, 0.6, 0.6, 0)

[node name="FavoriteMember" type="PanelContainer"]
offset_right = 300.0
offset_bottom = 515.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_u3od8")
script = ExtResource("1_ldfpm")

[node name="SelectedButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("3_hy3ym")
toggle_mode = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("3_hy3ym")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_wbfks")
expand_mode = 3
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_hy3ym")
text = "Nombre Personaje Grandisimo"
fit_content = true
scroll_active = false

[connection signal="focus_entered" from="SelectedButton" to="." method="_on_selected_button_focus_entered"]
[connection signal="pressed" from="SelectedButton" to="." method="_on_selected_button_pressed"]
